glFusion ChangeLog

v1.1.4
------
- Added $_SYSTEM['skip_ip_check'] to disable the long term cookie IP check
  (Mark)
- Handle disabled set_time_limit() function better in plugin upload routines
  (Mark)
- Fine tuned SQL calls to help prevent injection / other issues (Mark)
- Force IE8 to use IE7 compatibility mode to resolve text entry issues with
  the forum plugin (Mark)
- Properly filter the topics array prior to using in SQL in usersettings.php
  (Mark)
- Add CRLF between each JavaScript file (Mark)
- Additional security tweaks (Mark)
- 0000422 Use of adveditor in block editor does not permit use of image insert
  or file upload connector (Mark)
- Implemented 'passwd' configuration type, this allows passwords in the
  configuration screen to be properly masked (Mark)
- Story submission does not clear the Site Tailor menu cache which results
  in the topic story count being wrong (Mark) (story.class.php)
- Installation did not properly detect missing siteconfig.php.dist file (Mark)
- Advanced search using date range did not return stories or comments in
  that date range (Mark)

Forum
-----
- Set width for text formatted code blocks in forum when using a fixed width
  layout (Eric)
- Fixed issue where duplicate forum names (different categories) did not show
  in the forum selection list for moderation functions. (Mark)

Media Gallery
-------------
- Moved RSS feed files to the glFusion backend/ directory (Mark)
- Email moderators option did not appear in album edit / create (Mark)
- Under some circumstances creating an album would fail with an SQL error (Mark)
- Fixed issue where 'slideshow' auto tag did not honor the media_order
  field (Mark).
- FTP batch import would crash with SQL error (Mark)
- 0000428 Wiki type keywords - Added [alink] auto tag to allow text links
  to albums (Mark)
- 0000437 Slideshow autotag does not honor caption option in config. (Mark)
- Improved error handling when a user tries to access a media item they